Parte2/Versao1/y.output
Terminals unused in grammar

   RESERVED


Gramática

    0 $accept: Program $end

    1 Program: CLASS ID OBRACE Program_2 CBRACE

    2 Program_2: Program_2 FieldDecl
    3          | Program_2 MethodDecl
    4          | Program_2 SEMI
    5          | %empty

    6 FieldDecl: PUBLIC STATIC Type ID comma_id SEMI
    7          | error SEMI

    8 comma_id: comma_id COMMA ID
    9         | %empty

   10 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

   11 MethodHeader: Type ID OCURV MethodHeader_2 CCURV
   12             | VOID ID OCURV MethodHeader_2 CCURV

   13 MethodHeader_2: FormalParams
   14               | %empty

   15 MethodBody: OBRACE MethodBody_2 CBRACE

   16 MethodBody_2: MethodBody_2 VarDecl
   17             | MethodBody_2 Statement
   18             | %empty

   19 FormalParams: Type ID FormalParams_2

   20 FormalParams_2: FormalParams_2 COMMA Type ID
   21               | %empty

   22 FormalParams: STRING OSQUARE CSQUARE ID

   23 VarDecl: Type ID comma_id SEMI

   24 Type: BOOL
   25     | INT
   26     | DOUBLE

   27 Statement: OBRACE Statement_2 CBRACE
   28          | IF OCURV Expr CCURV Statement
   29          | IF OCURV Expr CCURV Statement ELSE Statement
   30          | WHILE OCURV Expr CCURV Statement
   31          | DO Statement WHILE OCURV Expr CCURV SEMI
   32          | PRINT OCURV Expr CCURV SEMI
   33          | PRINT OCURV STRLIT CCURV SEMI
   34          | Assignment SEMI
   35          | MethodInvocation SEMI
   36          | ParseArgs SEMI
   37          | SEMI
   38          | RETURN SEMI
   39          | RETURN Expr SEMI
   40          | error SEMI

   41 Statement_2: Statement_2 Statement
   42            | %empty

   43 Assignment: ID ASSIGN Expr

   44 MethodInvocation: ID OCURV CCURV
   45                 | ID OCURV Expr MethodInvocation_2 CCURV
   46                 | ID OCURV error CCURV

   47 MethodInvocation_2: MethodInvocation_2 COMMA Expr
   48                   | %empty

   49 ParseArgs: PARSEINT OCURV ID OSQUARE Expr CSQUARE CCURV
   50          | PARSEINT OCURV error CCURV

   51 Expr2: MethodInvocation
   52      | ParseArgs
   53      | Expr2 AND Expr2
   54      | Expr2 OR Expr2
   55      | Expr2 EQ Expr2
   56      | Expr2 GEQ Expr2
   57      | Expr2 GT Expr2
   58      | Expr2 LEQ Expr2
   59      | Expr2 LT Expr2
   60      | Expr2 NEQ Expr2
   61      | Expr2 PLUS Expr2
   62      | Expr2 MINUS Expr2
   63      | Expr2 STAR Expr2
   64      | Expr2 DIV Expr2
   65      | Expr2 MOD Expr2
   66      | NOT Expr2
   67      | PLUS Expr2
   68      | MINUS Expr2
   69      | ID
   70      | ID DOTLENGTH
   71      | BOOLLIT
   72      | DECLIT
   73      | REALLIT
   74      | OCURV error CCURV

   75 Expr: Assignment
   76     | Expr2
   77     | OCURV Expr CCURV


Terminals, with rules where they appear

$end (0) 0
error (256) 7 40 46 50 74
OCURV (258) 11 12 28 29 30 31 32 33 44 45 46 49 50 74 77
CCURV (259) 11 12 28 29 30 31 32 33 44 45 46 49 50 74 77
OBRACE (260) 1 15 27
CBRACE (261) 1 15 27
OSQUARE (262) 22 49
CSQUARE (263) 22 49
AND (264) 53
OR (265) 54
LT (266) 59
GT (267) 57
EQ (268) 55
NEQ (269) 60
LEQ (270) 58
GEQ (271) 56
PLUS (272) 61 67
MINUS (273) 62 68
STAR (274) 63
DIV (275) 64
MOD (276) 65
NOT (277) 66
ASSIGN (278) 43
SEMI (279) 4 6 7 23 31 32 33 34 35 36 37 38 39 40
COMMA (280) 8 20 47
BOOL (281) 24
CLASS (282) 1
DO (283) 31
DOTLENGTH (284) 70
DOUBLE (285) 26
ELSE (286) 29
IF (287) 28 29
INT (288) 25
PARSEINT (289) 49 50
PRINT (290) 32 33
PUBLIC (291) 6 10
RETURN (292) 38 39
STATIC (293) 6 10
STRING (294) 22
VOID (295) 12
WHILE (296) 30 31
BOOLLIT (297) 71
RESERVED (298)
ID (299) 1 6 8 11 12 19 20 22 23 43 44 45 46 49 69 70
DECLIT (300) 72
REALLIT (301) 73
STRLIT (302) 33
IFX (303)


Nonterminals, with rules where they appear

$accept (49)
   à esquerda: 0
Program (50)
   à esquerda: 1,à direita: 0
Program_2 (51)
   à esquerda: 2 3 4 5,à direita: 1 2 3 4
FieldDecl (52)
   à esquerda: 6 7,à direita: 2
comma_id (53)
   à esquerda: 8 9,à direita: 6 8 23
MethodDecl (54)
   à esquerda: 10,à direita: 3
MethodHeader (55)
   à esquerda: 11 12,à direita: 10
MethodHeader_2 (56)
   à esquerda: 13 14,à direita: 11 12
MethodBody (57)
   à esquerda: 15,à direita: 10
MethodBody_2 (58)
   à esquerda: 16 17 18,à direita: 15 16 17
FormalParams (59)
   à esquerda: 19 22,à direita: 13
FormalParams_2 (60)
   à esquerda: 20 21,à direita: 19 20
VarDecl (61)
   à esquerda: 23,à direita: 16
Type (62)
   à esquerda: 24 25 26,à direita: 6 11 19 20 23
Statement (63)
   à esquerda: 27 28 29 30 31 32 33 34 35 36 37 38 39 40,à direita:
    17 28 29 30 31 41
Statement_2 (64)
   à esquerda: 41 42,à direita: 27 41
Assignment (65)
   à esquerda: 43,à direita: 34 75
MethodInvocation (66)
   à esquerda: 44 45 46,à direita: 35 51
MethodInvocation_2 (67)
   à esquerda: 47 48,à direita: 45 47
ParseArgs (68)
   à esquerda: 49 50,à direita: 36 52
Expr2 (69)
   à esquerda: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    68 69 70 71 72 73 74,à direita: 53 54 55 56 57 58 59 60 61 62
    63 64 65 66 67 68 76
Expr (70)
   à esquerda: 75 76 77,à direita: 28 29 30 31 32 39 43 45 47 49
    77


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program  ir para o estado 2


State 1

    1 Program: CLASS . ID OBRACE Program_2 CBRACE

    ID  shift, and go to state 3


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


State 3

    1 Program: CLASS ID . OBRACE Program_2 CBRACE

    OBRACE  shift, and go to state 5


State 4

    0 $accept: Program $end .

    $default  aceite


State 5

    1 Program: CLASS ID OBRACE . Program_2 CBRACE

    $default  reduce using rule 5 (Program_2)

    Program_2  ir para o estado 6


State 6

    1 Program: CLASS ID OBRACE Program_2 . CBRACE
    2 Program_2: Program_2 . FieldDecl
    3          | Program_2 . MethodDecl
    4          | Program_2 . SEMI

    error   shift, and go to state 7
    CBRACE  shift, and go to state 8
    SEMI    shift, and go to state 9
    PUBLIC  shift, and go to state 10

    FieldDecl   ir para o estado 11
    MethodDecl  ir para o estado 12


State 7

    7 FieldDecl: error . SEMI

    SEMI  shift, and go to state 13


State 8

    1 Program: CLASS ID OBRACE Program_2 CBRACE .

    $default  reduce using rule 1 (Program)


State 9

    4 Program_2: Program_2 SEMI .

    $default  reduce using rule 4 (Program_2)


State 10

    6 FieldDecl: PUBLIC . STATIC Type ID comma_id SEMI
   10 MethodDecl: PUBLIC . STATIC MethodHeader MethodBody

    STATIC  shift, and go to state 14


State 11

    2 Program_2: Program_2 FieldDecl .

    $default  reduce using rule 2 (Program_2)


State 12

    3 Program_2: Program_2 MethodDecl .

    $default  reduce using rule 3 (Program_2)


State 13

    7 FieldDecl: error SEMI .

    $default  reduce using rule 7 (FieldDecl)


State 14

    6 FieldDecl: PUBLIC STATIC . Type ID comma_id SEMI
   10 MethodDecl: PUBLIC STATIC . MethodHeader MethodBody

    BOOL    shift, and go to state 15
    DOUBLE  shift, and go to state 16
    INT     shift, and go to state 17
    VOID    shift, and go to state 18

    MethodHeader  ir para o estado 19
    Type          ir para o estado 20


State 15

   24 Type: BOOL .

    $default  reduce using rule 24 (Type)


State 16

   26 Type: DOUBLE .

    $default  reduce using rule 26 (Type)


State 17

   25 Type: INT .

    $default  reduce using rule 25 (Type)


State 18

   12 MethodHeader: VOID . ID OCURV MethodHeader_2 CCURV

    ID  shift, and go to state 21


State 19

   10 MethodDecl: PUBLIC STATIC MethodHeader . MethodBody

    OBRACE  shift, and go to state 22

    MethodBody  ir para o estado 23


State 20

    6 FieldDecl: PUBLIC STATIC Type . ID comma_id SEMI
   11 MethodHeader: Type . ID OCURV MethodHeader_2 CCURV

    ID  shift, and go to state 24


State 21

   12 MethodHeader: VOID ID . OCURV MethodHeader_2 CCURV

    OCURV  shift, and go to state 25


State 22

   15 MethodBody: OBRACE . MethodBody_2 CBRACE

    $default  reduce using rule 18 (MethodBody_2)

    MethodBody_2  ir para o estado 26


State 23

   10 MethodDecl: PUBLIC STATIC MethodHeader MethodBody .

    $default  reduce using rule 10 (MethodDecl)


State 24

    6 FieldDecl: PUBLIC STATIC Type ID . comma_id SEMI
   11 MethodHeader: Type ID . OCURV MethodHeader_2 CCURV

    OCURV  shift, and go to state 27

    $default  reduce using rule 9 (comma_id)

    comma_id  ir para o estado 28


State 25

   12 MethodHeader: VOID ID OCURV . MethodHeader_2 CCURV

    BOOL    shift, and go to state 15
    DOUBLE  shift, and go to state 16
    INT     shift, and go to state 17
    STRING  shift, and go to state 29

    $default  reduce using rule 14 (MethodHeader_2)

    MethodHeader_2  ir para o estado 30
    FormalParams    ir para o estado 31
    Type            ir para o estado 32


State 26

   15 MethodBody: OBRACE MethodBody_2 . CBRACE
   16 MethodBody_2: MethodBody_2 . VarDecl
   17             | MethodBody_2 . Statement

    error     shift, and go to state 33
    OBRACE    shift, and go to state 34
    CBRACE    shift, and go to state 35
    SEMI      shift, and go to state 36
    BOOL      shift, and go to state 15
    DO        shift, and go to state 37
    DOUBLE    shift, and go to state 16
    IF        shift, and go to state 38
    INT       shift, and go to state 17
    PARSEINT  shift, and go to state 39
    PRINT     shift, and go to state 40
    RETURN    shift, and go to state 41
    WHILE     shift, and go to state 42
    ID        shift, and go to state 43

    VarDecl           ir para o estado 44
    Type              ir para o estado 45
    Statement         ir para o estado 46
    Assignment        ir para o estado 47
    MethodInvocation  ir para o estado 48
    ParseArgs         ir para o estado 49


State 27

   11 MethodHeader: Type ID OCURV . MethodHeader_2 CCURV

    BOOL    shift, and go to state 15
    DOUBLE  shift, and go to state 16
    INT     shift, and go to state 17
    STRING  shift, and go to state 29

    $default  reduce using rule 14 (MethodHeader_2)

    MethodHeader_2  ir para o estado 50
    FormalParams    ir para o estado 31
    Type            ir para o estado 32


State 28

    6 FieldDecl: PUBLIC STATIC Type ID comma_id . SEMI
    8 comma_id: comma_id . COMMA ID

    SEMI   shift, and go to state 51
    COMMA  shift, and go to state 52


State 29

   22 FormalParams: STRING . OSQUARE CSQUARE ID

    OSQUARE  shift, and go to state 53


State 30

   12 MethodHeader: VOID ID OCURV MethodHeader_2 . CCURV

    CCURV  shift, and go to state 54


State 31

   13 MethodHeader_2: FormalParams .

    $default  reduce using rule 13 (MethodHeader_2)


State 32

   19 FormalParams: Type . ID FormalParams_2

    ID  shift, and go to state 55


State 33

   40 Statement: error . SEMI

    SEMI  shift, and go to state 56


State 34

   27 Statement: OBRACE . Statement_2 CBRACE

    $default  reduce using rule 42 (Statement_2)

    Statement_2  ir para o estado 57


State 35

   15 MethodBody: OBRACE MethodBody_2 CBRACE .

    $default  reduce using rule 15 (MethodBody)


State 36

   37 Statement: SEMI .

    $default  reduce using rule 37 (Statement)


State 37

   31 Statement: DO . Statement WHILE OCURV Expr CCURV SEMI

    error     shift, and go to state 33
    OBRACE    shift, and go to state 34
    SEMI      shift, and go to state 36
    DO        shift, and go to state 37
    IF        shift, and go to state 38
    PARSEINT  shift, and go to state 39
    PRINT     shift, and go to state 40
    RETURN    shift, and go to state 41
    WHILE     shift, and go to state 42
    ID        shift, and go to state 43

    Statement         ir para o estado 58
    Assignment        ir para o estado 47
    MethodInvocation  ir para o estado 48
    ParseArgs         ir para o estado 49


State 38

   28 Statement: IF . OCURV Expr CCURV Statement
   29          | IF . OCURV Expr CCURV Statement ELSE Statement

    OCURV  shift, and go to state 59


State 39

   49 ParseArgs: PARSEINT . OCURV ID OSQUARE Expr CSQUARE CCURV
   50          | PARSEINT . OCURV error CCURV

    OCURV  shift, and go to state 60


State 40

   32 Statement: PRINT . OCURV Expr CCURV SEMI
   33          | PRINT . OCURV STRLIT CCURV SEMI

    OCURV  shift, and go to state 61


State 41

   38 Statement: RETURN . SEMI
   39          | RETURN . Expr SEMI

    OCURV     shift, and go to state 62
    PLUS      shift, and go to state 63
    MINUS     shift, and go to state 64
    NOT       shift, and go to state 65
    SEMI      shift, and go to state 66
    PARSEINT  shift, and go to state 39
    BOOLLIT   shift, and go to state 67
    ID        shift, and go to state 68
    DECLIT    shift, and go to state 69
    REALLIT   shift, and go to state 70

    Assignment        ir para o estado 71
    MethodInvocation  ir para o estado 72
    ParseArgs         ir para o estado 73
    Expr2             ir para o estado 74
    Expr              ir para o estado 75


State 42

   30 Statement: WHILE . OCURV Expr CCURV Statement

    OCURV  shift, and go to state 76


State 43

   43 Assignment: ID . ASSIGN Expr
   44 MethodInvocation: ID . OCURV CCURV
   45                 | ID . OCURV Expr MethodInvocation_2 CCURV
   46                 | ID . OCURV error CCURV

    OCURV   shift, and go to state 77
    ASSIGN  shift, and go to state 78


State 44

   16 MethodBody_2: MethodBody_2 VarDecl .

    $default  reduce using rule 16 (MethodBody_2)


State 45

   23 VarDecl: Type . ID comma_id SEMI

    ID  shift, and go to state 79


State 46

   17 MethodBody_2: MethodBody_2 Statement .

    $default  reduce using rule 17 (MethodBody_2)


State 47

   34 Statement: Assignment . SEMI

    SEMI  shift, and go to state 80


State 48

   35 Statement: MethodInvocation . SEMI

    SEMI  shift, and go to state 81


State 49

   36 Statement: ParseArgs . SEMI

    SEMI  shift, and go to state 82


State 50

   11 MethodHeader: Type ID OCURV MethodHeader_2 . CCURV

    CCURV  shift, and go to state 83


State 51

    6 FieldDecl: PUBLIC STATIC Type ID comma_id SEMI .

    $default  reduce using rule 6 (FieldDecl)


State 52

    8 comma_id: comma_id COMMA . ID

    ID  shift, and go to state 84


State 53

   22 FormalParams: STRING OSQUARE . CSQUARE ID

    CSQUARE  shift, and go to state 85


State 54

   12 MethodHeader: VOID ID OCURV MethodHeader_2 CCURV .

    $default  reduce using rule 12 (MethodHeader)


State 55

   19 FormalParams: Type ID . FormalParams_2

    $default  reduce using rule 21 (FormalParams_2)

    FormalParams_2  ir para o estado 86


State 56

   40 Statement: error SEMI .

    $default  reduce using rule 40 (Statement)


State 57

   27 Statement: OBRACE Statement_2 . CBRACE
   41 Statement_2: Statement_2 . Statement

    error     shift, and go to state 33
    OBRACE    shift, and go to state 34
    CBRACE    shift, and go to state 87
    SEMI      shift, and go to state 36
    DO        shift, and go to state 37
    IF        shift, and go to state 38
    PARSEINT  shift, and go to state 39
    PRINT     shift, and go to state 40
    RETURN    shift, and go to state 41
    WHILE     shift, and go to state 42
    ID        shift, and go to state 43

    Statement         ir para o estado 88
    Assignment        ir para o estado 47
    MethodInvocation  ir para o estado 48
    ParseArgs         ir para o estado 49


State 58

   31 Statement: DO Statement . WHILE OCURV Expr CCURV SEMI

    WHILE  shift, and go to state 89


State 59

   28 Statement: IF OCURV . Expr CCURV Statement
   29          | IF OCURV . Expr CCURV Statement ELSE Statement

    OCURV     shift, and go to state 62
    PLUS      shift, and go to state 63
    MINUS     shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 39
    BOOLLIT   shift, and go to state 67
    ID        shift, and go to state 68
    DECLIT    shift, and go to state 69
    REALLIT   shift, and go to state 70

    Assignment        ir para o estado 71
    MethodInvocation  ir para o estado 72
    ParseArgs         ir para o estado 73
    Expr2             ir para o estado 74
    Expr              ir para o estado 90


State 60

   49 ParseArgs: PARSEINT OCURV . ID OSQUARE Expr CSQUARE CCURV
   50          | PARSEINT OCURV . error CCURV

    error  shift, and go to state 91
    ID     shift, and go to state 92


State 61

   32 Statement: PRINT OCURV . Expr CCURV SEMI
   33          | PRINT OCURV . STRLIT CCURV SEMI

    OCURV     shift, and go to state 62
    PLUS      shift, and go to state 63
    MINUS     shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 39
    BOOLLIT   shift, and go to state 67
    ID        shift, and go to state 68
    DECLIT    shift, and go to state 69
    REALLIT   shift, and go to state 70
    STRLIT    shift, and go to state 93

    Assignment        ir para o estado 71
    MethodInvocation  ir para o estado 72
    ParseArgs         ir para o estado 73
    Expr2             ir para o estado 74
    Expr              ir para o estado 94


State 62

   74 Expr2: OCURV . error CCURV
   77 Expr: OCURV . Expr CCURV

    error     shift, and go to state 95
    OCURV     shift, and go to state 62
    PLUS      shift, and go to state 63
    MINUS     shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 39
    BOOLLIT   shift, and go to state 67
    ID        shift, and go to state 68
    DECLIT    shift, and go to state 69
    REALLIT   shift, and go to state 70

    Assignment        ir para o estado 71
    MethodInvocation  ir para o estado 72
    ParseArgs         ir para o estado 73
    Expr2             ir para o estado 74
    Expr              ir para o estado 96


State 63

   67 Expr2: PLUS . Expr2

    OCURV     shift, and go to state 97
    PLUS      shift, and go to state 63
    MINUS     shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 39
    BOOLLIT   shift, and go to state 67
    ID        shift, and go to state 98
    DECLIT    shift, and go to state 69
    REALLIT   shift, and go to state 70

    MethodInvocation  ir para o estado 72
    ParseArgs         ir para o estado 73
    Expr2             ir para o estado 99


State 64

   68 Expr2: MINUS . Expr2

    OCURV     shift, and go to state 97
    PLUS      shift, and go to state 63
    MINUS     shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 39
    BOOLLIT   shift, and go to state 67
    ID        shift, and go to state 98
    DECLIT    shift, and go to state 69
    REALLIT   shift, and go to state 70

    MethodInvocation  ir para o estado 72
    ParseArgs         ir para o estado 73
    Expr2             ir para o estado 100


State 65

   66 Expr2: NOT . Expr2

    OCURV     shift, and go to state 97
    PLUS      shift, and go to state 63
    MINUS     shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 39
    BOOLLIT   shift, and go to state 67
    ID        shift, and go to state 98
    DECLIT    shift, and go to state 69
    REALLIT   shift, and go to state 70

    MethodInvocation  ir para o estado 72
    ParseArgs         ir para o estado 73
    Expr2             ir para o estado 101


State 66

   38 Statement: RETURN SEMI .

    $default  reduce using rule 38 (Statement)


State 67

   71 Expr2: BOOLLIT .

    $default  reduce using rule 71 (Expr2)


State 68

   43 Assignment: ID . ASSIGN Expr
   44 MethodInvocation: ID . OCURV CCURV
   45                 | ID . OCURV Expr MethodInvocation_2 CCURV
   46                 | ID . OCURV error CCURV
   69 Expr2: ID .
   70      | ID . DOTLENGTH

    OCURV      shift, and go to state 77
    ASSIGN     shift, and go to state 78
    DOTLENGTH  shift, and go to state 102

    $default  reduce using rule 69 (Expr2)


State 69

   72 Expr2: DECLIT .

    $default  reduce using rule 72 (Expr2)


State 70

   73 Expr2: REALLIT .

    $default  reduce using rule 73 (Expr2)


State 71

   75 Expr: Assignment .

    $default  reduce using rule 75 (Expr)


State 72

   51 Expr2: MethodInvocation .

    $default  reduce using rule 51 (Expr2)


State 73

   52 Expr2: ParseArgs .

    $default  reduce using rule 52 (Expr2)


State 74

   53 Expr2: Expr2 . AND Expr2
   54      | Expr2 . OR Expr2
   55      | Expr2 . EQ Expr2
   56      | Expr2 . GEQ Expr2
   57      | Expr2 . GT Expr2
   58      | Expr2 . LEQ Expr2
   59      | Expr2 . LT Expr2
   60      | Expr2 . NEQ Expr2
   61      | Expr2 . PLUS Expr2
   62      | Expr2 . MINUS Expr2
   63      | Expr2 . STAR Expr2
   64      | Expr2 . DIV Expr2
   65      | Expr2 . MOD Expr2
   76 Expr: Expr2 .

    AND    shift, and go to state 103
    OR     shift, and go to state 104
    LT     shift, and go to state 105
    GT     shift, and go to state 106
    EQ     shift, and go to state 107
    NEQ    shift, and go to state 108
    LEQ    shift, and go to state 109
    GEQ    shift, and go to state 110
    PLUS   shift, and go to state 111
    MINUS  shift, and go to state 112
    STAR   shift, and go to state 113
    DIV    shift, and go to state 114
    MOD    shift, and go to state 115

    $default  reduce using rule 76 (Expr)


State 75

   39 Statement: RETURN Expr . SEMI

    SEMI  shift, and go to state 116


State 76

   30 Statement: WHILE OCURV . Expr CCURV Statement

    OCURV     shift, and go to state 62
    PLUS      shift, and go to state 63
    MINUS     shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 39
    BOOLLIT   shift, and go to state 67
    ID        shift, and go to state 68
    DECLIT    shift, and go to state 69
    REALLIT   shift, and go to state 70

    Assignment        ir para o estado 71
    MethodInvocation  ir para o estado 72
    ParseArgs         ir para o estado 73
    Expr2             ir para o estado 74
    Expr              ir para o estado 117


State 77

   44 MethodInvocation: ID OCURV . CCURV
   45                 | ID OCURV . Expr MethodInvocation_2 CCURV
   46                 | ID OCURV . error CCURV

    error     shift, and go to state 118
    OCURV     shift, and go to state 62
    CCURV     shift, and go to state 119
    PLUS      shift, and go to state 63
    MINUS     shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 39
    BOOLLIT   shift, and go to state 67
    ID        shift, and go to state 68
    DECLIT    shift, and go to state 69
    REALLIT   shift, and go to state 70

    Assignment        ir para o estado 71
    MethodInvocation  ir para o estado 72
    ParseArgs         ir para o estado 73
    Expr2             ir para o estado 74
    Expr              ir para o estado 120


State 78

   43 Assignment: ID ASSIGN . Expr

    OCURV     shift, and go to state 62
    PLUS      shift, and go to state 63
    MINUS     shift, and go to state 64
    NOT       shift, and go to state 65
    PARSEINT  shift, and go to state 39
    BOOLLIT   shift, and go to state 67
    ID        shift, and go to state 68
    DECLIT    shift, and go to state 69
    REALLIT   shift, and go to state 70

    Assignment        ir para o estado 71
    MethodInvocation  ir para o estado 72
    ParseArgs         ir para o estado 73
    Expr2             ir para o estado 74
    Expr              ir para o estado 121


State 79

   23 VarDecl: Type ID . comma_id SEMI

    $default  reduce using rule 9 (comma_id)

    comma_id  ir para o estado 122


State 80

   34 Statement: Assignment SEMI .

    $default  reduce using rule 34 (Statement)


State 81

   35 Statement: MethodInvocation SEMI .

    $default  reduce using rule 35 (Statement)


State 82

   36 Statement: ParseArgs SEMI .

    $default  reduce using rule 36 (Statement)


State 83

   11 MethodHeader: Type ID OCURV MethodHeader_2 CCURV .

    $default  reduce using rule 11 (MethodHeader)


State 84

    8 comma_id: comma_id COMMA ID .

    $default  reduce using rule 8 (comma_id)


State 85

   22 FormalParams: STRING OSQUARE CSQUARE . ID

    ID  shift, and go to state 123


State 86

   19 FormalParams: Type ID FormalParams_2 .
   20 FormalParams_2: FormalParams_2 . COMMA Type ID

    COMMA  shift, and go to state 124

    $default  reduce using rule 19 (FormalParams)


State 87

   27 Statement: OBRACE Statement_2 CBRACE .

    $default  reduce using rule 27 (Statement)


State 88

   41 Statement_2: Statement_2 Statement .

    $default  reduce using rule 41 (Statement_2)


State 89

   31 Statement: DO Statement WHILE . OCURV Expr CCURV SEMI

    OCURV  shift, and go to state 125


State 90

   28 Statement: IF OCURV Expr . CCURV Statement
   29          | IF OCURV Expr . CCURV Statement ELSE Statement

    CCURV  shift, and go to state 126


State 91

   50 ParseArgs: PARSEINT OCURV error . CCURV

    CCURV  shift, and go to state 127


State 92

   49 ParseArgs: PARSEINT OCURV ID . OSQUARE Expr CSQUARE CCURV

    OSQUARE  shift, and go to state 128


State 93

   33 Statement: PRINT OCURV STRLIT . CCURV SEMI

    CCURV  shift, and go to state 129


State 94

   32 Statement: PRINT OCURV Expr . CCURV SEMI

    CCURV  shift, and go to state 130


State 95

   74 Expr2: OCURV error . CCURV

    CCURV  shift, and go to state 131


State 96

   77 Expr: OCURV Expr . CCURV

    CCURV  shift, and go to state 132


State 97

   74 Expr2: OCURV . error CCURV

    error  shift, and go to state 95


State 98

   44 MethodInvocation: ID . OCURV CCURV
   45                 | ID . OCURV Expr MethodInvocation_2 CCURV
   46                 | ID . OCURV error CCURV
   69 Expr2: ID .
   70      | ID . DOTLENGTH

    OCURV      shift, and go to state 77
    DOTLENGTH  shift, and go to state 102

    $default  reduce using rule 69 (Expr2)


State 99

   53 Expr2: Expr2 . AND Expr2
   54      | Expr2 . OR Expr2
   55      | Expr2 . EQ Expr2
   56      | Expr2 . GEQ Expr2
   57      | Expr2 . GT Expr2
   58      | Expr2 . LEQ Expr2
   59      | Expr2 . LT Expr2
   60      | Expr2 . NEQ Expr2
   61      | Expr2 . PLUS Expr2
   62      | Expr2 . MINUS Expr2
   63      | Expr2 . STAR Expr2
   64      | Expr2 . DIV Expr2
   65      | Expr2 . MOD Expr2
   67      | PLUS Expr2 .

    $default  reduce using rule 67 (Expr2)


State 100
